--- a/src/components/ui/Footers.css
+++ b/src/components/ui/Footers.css
@@ -9,7 +9,7 @@ body {
 .footer-container {
   background: black;
   color: white;
-  padding: 30px;
+  padding:70px;
   gap: 100px;
 }
 
@@ -17,13 +17,13 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 210px;
+  gap: 290px;
 }
 
 .footer-section {
   flex: 1;
   min-width: 220px;
-  margin: 10px;
+  margin: 20px 0;
 }
 
 .footer-logo {
