--- a/src/pages/main/Certificate1.css
+++ b/src/pages/main/Certificate1.css
@@ -505,11 +505,9 @@ body {
   border: 2.5px solid #000000;
   background: #f7751e;
   color: #fff;
-}
-
-.cert-price-img {
+}.cert-price-img {
   width: 180px;
-  height: 150px;
+  height: 100px;
   border-radius: 7px;
   object-fit: contain;
   background: #fff;
@@ -525,8 +523,8 @@ body {
 }
 
 .cert-rating-img {
-  width: 480px;
-  height: 490px;
+  width: 160px;
+  height: 190px;
   object-fit: var(--accent-height);
 }
 
@@ -536,9 +534,8 @@ body {
   color: #232323;
   font-family: inherit;
   letter-spacing: 0.01em;
-  margin: 0;
-  padding: 0;
 }
+
 
 @media (max-width: 1200px) {
   .course-row {
